--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "repository": "https://github.com/frankzhangae/aetn.ott.appletv.tester",
   "name": "tester",
   "version": "1.0.0",
   "description": "AETV digital ATV legacy restful API tester",
@@ -13,6 +14,9 @@
   "author": "Frank",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "colors": "^1.3.2",
+    "express": "^4.16.2",
+    "request": "^2.86.0",
+    "underscore": "^1.9.1"
   }
 }
