--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "AETV digital ATV legacy restful API tester",
   "main": "public/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test.js history 4.0",
     "start": "node server.js"
   },
   "keywords": [
