--- a/config/config-mlt.json
+++ b/config/config-mlt.json
@@ -222,7 +222,7 @@
 			"routes": [
 				{
 					"name": "top shelf",
-					"type": "xml",
+					"type": "json",
 					"urls": ["/topShelf"]
 				},
 				{
